# lambda_function_01

./: .gitignore  Cargo.toml  README.md  serverless.yml
.github/workflows/: cicd.yml
migrations/: 20221102034839_create_table_users.sql
src/: main.rs
