[package]
name = "lambda_function_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
aws-config = "0.49.0"
aws-sdk-secretsmanager = "0.19.0"
futures = { version = "0.3.25", default-features = false }
lambda_http = "0.7"
lambda_runtime = "0.7.0"
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.21.2", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
