[package]
name = "lambda_function_01"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get-all-users"
path = "./src/bin/get-all-users.rs"

[dependencies]
async-trait = "0.1.58"
futures = { version = "0.3.25", default-features = false }
lambda_http = "0.7"
lambda_runtime = "0.7.0"
serde_with = "2.0.1"
serde = "1.0.147"
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.21.2", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.11.12", default-features = false }
lambda_dev = { git = "https://github.com/kano1101/lambda_dev.git" }
anyhow = "1.0.66"
